import "ApiResponse.proto";
import "PrizeItem.proto";

message FinishBattleResponse{//战斗结算结果
	optional ApiResponse response = 1;
	repeated PrizeItem prizeItems = 2;//战斗胜利掉落的奖品
}